--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/assets/styles.css">
+    <link rel="stylesheet" href="/climapp/assets/styles.css">
     <title>Climapp</title>
 </head>
 
@@ -42,6 +42,6 @@
         <p><a href="https://linktree.com/tomasbascal" target="_blank">Tomas Bascal</a> & Red Coffe Development</p>
     </section>
 </footer>
-<script src="/assets/scripts.js"></script>
+<script src="/climapp/assets/scripts.js"></script>
 
 </html>
